// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display initial state with NO props should match snapshot with no props 1`] = `
<div
  className="display"
>
  <p>
    Name  - undefined
  </p>
  <p>
    Avg. Temp  - undefined
  </p>
  <p>
    Distance from the sun  - 
  </p>
  <p>
    undefined / undefined
  </p>
  <p>
    Length of day  - undefined
  </p>
  <p>
    Orbital period  - undefined
  </p>
</div>
`;

exports[`Display initial state with props should match snapshot with props 1`] = `
<div
  className="display"
>
  <p>
    Name  - undefined
  </p>
  <p>
    Avg. Temp  - undefined
  </p>
  <p>
    Distance from the sun  - 
  </p>
  <p>
    undefined / undefined
  </p>
  <p>
    Length of day  - undefined
  </p>
  <p>
    Orbital period  - undefined
  </p>
  <img
    alt=""
    className="imgs"
    src="some href"
  />
</div>
`;
